<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_action_copy"
        android:orderInCategory="1"
        android:title="@string/copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reset"
        android:icon="@drawable/ic_action_reset"
        android:orderInCategory="2"
        android:title="@string/reset"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_comparison_activity"
        android:orderInCategory="3"
        android:title="@string/compare_two_texts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="4"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="5"
        android:title="@string/rate_the_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_policy"
        android:orderInCategory="6"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />

</menu>
